--- a/summary.html
+++ b/summary.html
@@ -37,7 +37,7 @@
                 <!-- Greeting -->
                 <div class="greeting">
                     <h2 class="txt-h2">Good morning,</h2>
-                    <p class="greeting-name" id="greeting-name">Dennis Ammen</p>
+                    <p class="greeting-name" id="greeting-name">Marco Loch</p>
                 </div>
                 <!-- Summary -->
                 <div class="grid">
